--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1682,6 +1682,10 @@ button, .btn{
         box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.5);
       }
 
+      50% {
+        box-shadow: 0 0 0 40px rgba(28, 7, 0, .3);
+      }
+
       100% {
         box-shadow: 0 0 0 40px rgba(28, 7, 0, .2);
       }
