--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -34,6 +34,14 @@ html{
   font-size: 14px;
 }
 
+html, body{
+  overflow: initial;
+}
+
+main{
+  overflow: hodden;
+}
+
 .container{
   max-width: $container;
   width: 100%;
@@ -126,6 +134,7 @@ button, .btn{
   overflow: hidden;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  opacity: 1;
 
   @media only screen and (max-width: 768px){
     .header{
@@ -145,7 +154,6 @@ button, .btn{
 
 .sticky {
   background-color: #35353582;
-  opacity: 1;
   top: 0px;
 }
 
@@ -183,23 +191,11 @@ button, .btn{
       color: #ad2d00;
     }
 
-    &:after {
-      background-color: #ad2d00;
-      display: block;
-      content: "";
-      height: 1.4px;
-      width: 0%;
-      -webkit-transition: width .3s ease-in-out;
-      -moz--transition: width .3s ease-in-out;
-      transition: width .3s ease-in-out;
-    }
-    &:hover:after,
-    &:focus:after {
-      width: 100%;
+    &.active{
+      color: #ad2d00;
     }
   }
 }
-
 
 .mobile-toggle{
   display: none;
@@ -245,10 +241,6 @@ button, .btn{
           color: #fff;
           &:hover{
             color: #e0e0e0;
-
-            &:after{
-              display: none;
-            }
           }
         }
       }
@@ -279,6 +271,7 @@ button, .btn{
   align-items: center;
 
   background-image: url(../img/bg-1.jpg);
+  background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 48% 50%;
@@ -813,6 +806,11 @@ button, .btn{
     }
   }
 
+  @media only screen and (max-width: 1024px){
+    &-wrapper{
+      height: 100%;
+    }
+  }
 
   @media only screen and (max-width: 768px){
     padding: 18vh 0 5vh;
@@ -1027,6 +1025,10 @@ button, .btn{
       flex-direction: column-reverse;
     }
 
+    &__title{
+      margin-bottom: 90px;
+    }
+
     &__menu{
       width: 100%;
       flex-direction: row;
@@ -1066,6 +1068,24 @@ button, .btn{
 
       &--item{
         margin-bottom: 0;
+
+        .slick-track{
+          align-items: center;
+        }
+      }
+    }
+
+    &__section{
+      align-items: center;
+
+      &--industrial .industrial__img,
+      &--web .web__img,
+      &--photography .photo__img{
+        &:nth-child(1), &:nth-child(2), &:nth-child(3){
+          margin-top: 0;
+          margin-bottom: 0;
+          align-self: unset;
+        }
       }
     }
 
@@ -1565,81 +1585,192 @@ button, .btn{
     height: 100%;
   }
 
-  &__form{
-    padding: 25px;
+  & div.modal-wrapper {
+    display: flex;
     position: absolute;
+    width: 30%;
+    height: auto;
+    background: none;
     top: 50%;
-    right: 5.5vw;
     transform: translateY(-50%);
+    margin-left: calc(100vw - 35%);
+
+  }
+
+  // &__form{
+  //   padding: 25px;
+  //   position: absolute;
+  //   transform: translateY(-50%);
+  //   display: flex;
+  //   flex-direction: column;
+
+  //   background-color: rgba(255, 254, 255, .9);
+  //   border-radius: 10px;
+
+  //   .top-line{
+  //     margin-bottom: 30px;
+  //     display: flex;
+  //     justify-content: space-between; 
+
+  //     .small-input{
+  //       margin-bottom: 0;
+  //       width: 50%;
+
+  //       &:first-of-type{
+  //         margin-right: 30px;
+  //       }
+  //     }
+  //   }
+
+  //   .ba-form-error{
+  //     display: none;
+  //   }
+
+  //   &--input{
+  //     border: 2px solid rgba(153, 153, 153, .2);
+  //     padding: 17px 0 17px 18px;
+  //     margin-bottom: 30px;
+  //     box-shadow: none;
+
+  //     &::-webkit-input-placeholder {
+  //       font-family: $mainFf;
+  //       font-size: 1rem;
+  //       letter-spacing: 0.01em;
+  //       color:#999999;
+  //     }
+  //     &::-moz-placeholder{
+  //       font-family: $mainFf;
+  //       font-size: 1rem;
+  //       letter-spacing: 0.01em;
+  //       color:#999999;
+  //     }
+  //     &:-moz-placeholder{
+  //       font-family: $mainFf;
+  //       font-size: 1rem;
+  //       letter-spacing: 0.01em;
+  //       color:#999999;
+  //     }
+  //     &:-ms-input-placeholder{
+  //       font-family: $mainFf;
+  //       font-size: 1rem;
+  //       letter-spacing: 0.01em;
+  //       color:#999999;
+  //     }
+  //   }
+
+  //   textarea{
+  //     height: 180px;
+  //   }
+
+  //   &--btn{
+  //     padding: 20px 15px;
+  //     background-color: $main-color;
+  //     width: max-content;
+  //     border: none;
+  //     border-radius: 3px;
+  //     box-shadow: none;
+  //     font-family: $mainFf;
+  //     font-size: 1rem;
+  //     line-height: 1rem;
+  //     text-transform: uppercase;
+  //     letter-spacing: 0.05em;
+  //     color: #fff;
+  //   }
+  // }
+
+  .contact__form{
+    padding: 25px;
     display: flex;
     flex-direction: column;
+    height: max-content;
 
     background-color: rgba(255, 254, 255, .9);
     border-radius: 10px;
+  }
 
-    .top-line{
-      margin-bottom: 30px;
-      display: flex;
-      justify-content: space-between; 
+  .form__row{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 30px;
 
-      .small-input{
-        margin-bottom: 0;
-        width: 12vw;
-
-        &:first-of-type{
-          margin-right: 30px;
-        }
-      }
+    & .top-line.form__control{
+      width: 48%;
     }
 
-    &--input{
-      border: 2px solid rgba(153, 153, 153, .2);
-      padding: 17px 0 17px 18px;
-      margin-bottom: 30px;
+    .form__control{
+      width: 100%;
 
-      &::-webkit-input-placeholder {
-        font-family: $mainFf;
-        font-size: 1rem;
-        letter-spacing: 0.01em;
-        color:#999999;
-      }
-      &::-moz-placeholder{
-        font-family: $mainFf;
-        font-size: 1rem;
-        letter-spacing: 0.01em;
-        color:#999999;
-      }
-      &:-moz-placeholder{
-        font-family: $mainFf;
-        font-size: 1rem;
-        letter-spacing: 0.01em;
-        color:#999999;
-      }
-      &:-ms-input-placeholder{
-        font-family: $mainFf;
-        font-size: 1rem;
-        letter-spacing: 0.01em;
-        color:#999999;
+      input{
+        width: 100%;
       }
     }
+  }
 
-    textarea{
-      height: 180px;
-    }
+  .form--error{
+    display: none;
+    margin-top: 5px;
+    width: 100%;
+    padding: 8px;
+    font-family: $mainFf;
+    color: #2b1e1a;
+    border-radius: 5px;
+    background-color: #b730001c;
+  }
 
-    &--btn{
-      padding: 20px 15px;
-      background-color: $main-color;
-      width: min-content;
-      border: none;
-      border-radius: 3px;
-      box-shadow: none;
+  .form__input{
+    border: 2px solid rgba(153, 153, 153, .2);
+    padding: 17px 0 17px 18px;
+    box-shadow: none;
+
+    &::-webkit-input-placeholder {
       font-family: $mainFf;
       font-size: 1rem;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      color: #fff;
+      letter-spacing: 0.01em;
+      color:#999999;
     }
+    &::-moz-placeholder{
+      font-family: $mainFf;
+      font-size: 1rem;
+      letter-spacing: 0.01em;
+      color:#999999;
+    }
+    &:-moz-placeholder{
+      font-family: $mainFf;
+      font-size: 1rem;
+      letter-spacing: 0.01em;
+      color:#999999;
+    }
+    &:-ms-input-placeholder{
+      font-family: $mainFf;
+      font-size: 1rem;
+      letter-spacing: 0.01em;
+      color:#999999;
+    }
+  }
+
+  textarea{
+    height: 180px;
+    width: 100%;
+  }
+
+  .form__btn{
+    padding: 20px 35px;
+    background-color: $main-color;
+    width: max-content;
+    border: none;
+    border-radius: 3px;
+    box-shadow: none;
+    font-family: $mainFf;
+    font-size: 1rem;
+    line-height: 1rem;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+    color: #fff;
+  }
+
+  .open-btn{
+    display: none;
   }
 
   @media only screen and (max-width: 1024px){
@@ -1657,51 +1788,69 @@ button, .btn{
       padding: 5vh 5vw;
     }
 
-    &__form{
+    & div.modal-wrapper{
       display: none;
-      top: unset;
-      right: 8vw;
-      bottom: 6%;
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 0; 
+      left: 0;
+      z-index: 1;
+      background: rgba(62, 54, 51, 0.53);
+      -webkit-transition: all 0.25s ease-in-out;
+      transition: all 0.25s ease-in-out;
       transform: none;
-
-      .top-line{
-        margin-bottom: 20px;
-
-        .small-input:first-of-type{
-          margin-right: 20px;
-        }
-      }
-
-      &--input .small-input, &--input{
-        margin-bottom: 20px;
-      }
+      margin: 0;
+      align-items: center;
+      justify-content: center;
     }
 
-    input, textarea{
-      padding: 12px 0 12px 15px;
 
-      &::-webkit-input-placeholder {
-        font-size: .7rem;
-      }
-      &::-moz-placeholder{
-        font-size: .7rem;
-      }
-      &:-moz-placeholder{
-        font-size: .7rem;
-      }
-      &:-ms-input-placeholder{
-        font-size: .7rem;
-      }
+    &__form{
+      width: 600px;
+      height: 400px;
+      margin: 0 20px;
+      display: flex;
+      position: absolute;
+      transform: none;
     }
 
-    textarea{
-      height: 10vw;
+    .open-btn{
+      position: absolute;
+      right: 15vw;
+      bottom: 10vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 90px;
+      height: 90px;
+      color: #292929;
+      text-transform: uppercase;
+      font-family: $mainFf;
+      font-weight: 400;
+      font-size: .8rem;
+      background: rgba(255, 255, 255, 0.7);
+      border-radius: 50%;
+      animation: radial-pulse 1s infinite;
     }
 
-    input.contact__form--btn{
-      padding: 10px 15px;
+    .animation-btn{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    @keyframes radial-pulse{
+      0% {
+        box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.5);
+      }
+
+      100% {
+        box-shadow: 0 0 0 40px rgba(28, 7, 0, .2);
+      }
     }
   }
+
 
   @media only screen and (max-width: 768px){
     &__map{
@@ -1722,6 +1871,15 @@ button, .btn{
           font-size: .7rem;
         }
       }
+    }
+  }
+
+  @media only screen and (max-width: 460px){
+    .open-btn{
+      bottom: 22vh;
+      width: 50px;
+      height: 50px;
+      font-size: .45rem;
     }
   }
 }
