--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -145,7 +145,6 @@ button, .btn{
 
 .open-nav {
   max-height: 400px !important;
-  background-color: #35353582;
   .mobile-toggle {
     transform: rotate(-90deg);
     -webkit-transform: rotate(-90deg);
@@ -153,7 +152,7 @@ button, .btn{
 }
 
 .sticky {
-  background-color: #35353582;
+  background-color: rgba(53, 53, 53, 0.92);
   top: 0px;
 }
 
@@ -641,6 +640,7 @@ button, .btn{
   display: flex;
   background: none;
   min-height: 100vh;
+  overflow: hidden;
 
   &:before{
     content: '';
@@ -807,13 +807,15 @@ button, .btn{
   }
 
   @media only screen and (max-width: 1024px){
-    &-wrapper{
-      height: 100%;
-    }
+    min-height: auto;
   }
 
   @media only screen and (max-width: 768px){
     padding: 18vh 0 5vh;
+
+    &-wrapper{
+      height: 100%;
+    }
   }
 
   @media only screen and (max-width: 690px){
@@ -880,6 +882,7 @@ button, .btn{
 .portfolio{
   padding: 15vh 0 10vh;
   position: relative;
+  overflow: hidden;
 
   background: linear-gradient(to bottom, rgba(51,51,51,0.8) 0%,rgba(51,51,51,0.8) 100%), url(../img/portfolio-bg.jpg);
   background-repeat: no-repeat;
@@ -1594,92 +1597,11 @@ button, .btn{
     top: 50%;
     transform: translateY(-50%);
     margin-left: calc(100vw - 35%);
-
   }
-
-  // &__form{
-  //   padding: 25px;
-  //   position: absolute;
-  //   transform: translateY(-50%);
-  //   display: flex;
-  //   flex-direction: column;
-
-  //   background-color: rgba(255, 254, 255, .9);
-  //   border-radius: 10px;
-
-  //   .top-line{
-  //     margin-bottom: 30px;
-  //     display: flex;
-  //     justify-content: space-between; 
-
-  //     .small-input{
-  //       margin-bottom: 0;
-  //       width: 50%;
-
-  //       &:first-of-type{
-  //         margin-right: 30px;
-  //       }
-  //     }
-  //   }
-
-  //   .ba-form-error{
-  //     display: none;
-  //   }
-
-  //   &--input{
-  //     border: 2px solid rgba(153, 153, 153, .2);
-  //     padding: 17px 0 17px 18px;
-  //     margin-bottom: 30px;
-  //     box-shadow: none;
-
-  //     &::-webkit-input-placeholder {
-  //       font-family: $mainFf;
-  //       font-size: 1rem;
-  //       letter-spacing: 0.01em;
-  //       color:#999999;
-  //     }
-  //     &::-moz-placeholder{
-  //       font-family: $mainFf;
-  //       font-size: 1rem;
-  //       letter-spacing: 0.01em;
-  //       color:#999999;
-  //     }
-  //     &:-moz-placeholder{
-  //       font-family: $mainFf;
-  //       font-size: 1rem;
-  //       letter-spacing: 0.01em;
-  //       color:#999999;
-  //     }
-  //     &:-ms-input-placeholder{
-  //       font-family: $mainFf;
-  //       font-size: 1rem;
-  //       letter-spacing: 0.01em;
-  //       color:#999999;
-  //     }
-  //   }
-
-  //   textarea{
-  //     height: 180px;
-  //   }
-
-  //   &--btn{
-  //     padding: 20px 15px;
-  //     background-color: $main-color;
-  //     width: max-content;
-  //     border: none;
-  //     border-radius: 3px;
-  //     box-shadow: none;
-  //     font-family: $mainFf;
-  //     font-size: 1rem;
-  //     line-height: 1rem;
-  //     text-transform: uppercase;
-  //     letter-spacing: 0.05em;
-  //     color: #fff;
-  //   }
-  // }
 
   .contact__form{
     padding: 25px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     height: max-content;
@@ -1693,6 +1615,10 @@ button, .btn{
     width: 100%;
     justify-content: space-between;
     margin-bottom: 30px;
+    
+    &:last-of-type{
+      margin-bottom: 0;
+    }
 
     & .top-line.form__control{
       width: 48%;
@@ -1806,10 +1732,8 @@ button, .btn{
     }
 
 
-    &__form{
-      width: 600px;
-      height: 400px;
-      margin: 0 20px;
+    & &__form{
+      width: 70vw;
       display: flex;
       position: absolute;
       transform: none;
@@ -1871,6 +1795,24 @@ button, .btn{
           font-size: .7rem;
         }
       }
+    }
+
+    .form__row{
+      flex-direction: column;
+      margin-bottom: 20px;
+
+      .top-line.form__control{
+        width: 100%;
+
+        &:nth-child(1){
+          margin-bottom: 20px;
+        }
+      }
+    }
+
+    .form__btn{
+      padding: 10px 25px;
+      font-size: .8rem;
     }
   }
 
